--- a/.github/workflows/build_and_tag.yml
+++ b/.github/workflows/build_and_tag.yml
@@ -100,9 +100,9 @@ jobs:
           id: timestamp
           run: echo "TIMESTAMP=$(date +%s)" >> $GITHUB_ENV
 
-        - name: Set registry owner
-          id: set-owner
-          run: echo "OWNER=${GITHUB_REPOSITORY%%/*}" >> "${GITHUB_ENV}"
+        - name: Set repository owner
+          id: set-repo
+          run: echo "REPO=${GITHUB_REPOSITORY@L}" >> "${GITHUB_ENV}"
 
         - name: Checkout repo
           uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
@@ -122,7 +122,7 @@ jobs:
             context: app/
             file: app/Dockerfile.frontend
             push: true
-            tags: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ env.TIMESTAMP }}
+            tags: ${{ env.REGISTRY }}/${{ env.REPO }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ env.TIMESTAMP }}
 
         - id: get-frontend-build-name
           name: Save frontend image path to file
@@ -140,7 +140,7 @@ jobs:
             context: app/
             file: app/Dockerfile.backend
             push: true
-            tags: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.BACKEND_IMAGE_NAME }}:${{ env.TIMESTAMP }}
+            tags: ${{ env.REGISTRY }}/${{ env.REPO }}/${{ env.BACKEND_IMAGE_NAME }}:${{ env.TIMESTAMP }}
 
         - id: get-backend-build-name
           name: Save backend image path to file
