Update build_and_tag.yml permission write_package

--- a/.github/workflows/build_and_tag.yml
+++ b/.github/workflows/build_and_tag.yml
@@ -93,7 +93,7 @@ jobs:
 
         permissions:
             contents: write
-            packages: write
+            packages: write_package
             
         steps:
         - name: Set Timestamp
